# challenge-ufolep

./: .gitignore  clubs.csv  collet.txt  collet_nolayout.txt  jsconfig.json  package-lock.json  package.json  parse.py  points.csv  pyproject.toml  resultats.csv
archive_2024/challenge_ufolep_backend/: coureurs.csv
archive_2024/challenge_ufolep_backend/courses/: courses.csv
archive_2024/data/: resultats_club.json  resultats_indiv.json
archive_2025/challenge_ufolep_backend/courses/: courses.csv
challenge_ufolep_backend/: analyseur.py  calcul.py  compute_points.py  coureurs.csv  coureurs.xlsx  format_results.py
challenge_ufolep_backend/courses/: Classements GP SMA 2026.xlsx  GP d'OYEU 2026.xlsm  courses.csv  ufolep-38-Grimpee-de-LA-MORTE-2026-22.xlsx
challenge_ufolep_backend/courses/01_alpespace/: 15_16.csv  u1.csv  u2.csv  u3.csv  u4.csv  uf.csv
challenge_ufolep_backend/courses/02_alloix/: u2.csv  u3.csv  u4.csv
challenge_ufolep_backend/courses/02_oyeu/: 13_14.csv  15_16.csv  u1.csv  u2.csv  u3.csv  u4.csv  uf.csv
challenge_ufolep_backend/courses/03_alloix/: 15_16.csv  u1.csv  u2.csv  u3.csv  u4.csv  uf.csv
challenge_ufolep_backend/courses/03_oyeu/: 15_16.csv  15_16_f.csv  u1.csv  u2.csv  u3.csv  uf.csv
challenge_ufolep_backend/courses/04_lalley/: 15_16.csv  u1.csv  u4.csv  uf.csv
components/: Classement.js  Club.js  Header.js
data/: coureurs.csv  resultats_club.json  resultats_indiv.json
lib/: resultats.js
pages/: _app.js  clubs.js  femmes.js  hommes.js  index.js  jeunes.js
styles/: globals.css
(+358 files in other folders)
