[tool.poetry]
name = "challenge_ufolep_backend"
version = "0.1.0"
description = "Code pour le challenge ufolep"
authors = ["Timothée Wintz <timothee@timwin.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
tabula-py = "^2.9.0"
pdfplumber = "^0.11.0"
mypy = "^1.9.0"
unidecode = "^1.3.8"
pyyaml = "^6.0.1"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
